# sipmessage

./: .gitignore  .readthedocs.yaml  MANIFEST.in  Makefile  README.rst  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  headers.rst  index.rst  messages.rst
src/sipmessage/: __init__.py  address.py  auth.py  cseq.py  grammar.py  mediatype.py  message.py  parameters.py  rfc3261.py  uri.py  utils.py  via.py
tests/: test_address.py  test_auth.py  test_cseq.py  test_mediatype.py  test_message.py  test_parameters.py  test_public_api.py  test_uri.py  test_via.py
